fix spacing bug on wishlist page and update profile pop up not showing as full screen in iphone 14

--- a/src/components/signin/popup/styles.scss
+++ b/src/components/signin/popup/styles.scss
@@ -90,7 +90,7 @@
 
 @media screen and (max-width: 992px) {
   .popup-form-bg {
-     height: 100vh !important;
+     height: 101vh !important;
 
     overflow-y: scroll;
     z-index: 0;
