--- a/src/containers/wishlist/styles.scss
+++ b/src/containers/wishlist/styles.scss
@@ -209,13 +209,13 @@ span{
 }
   
 .wishlist-block-outer {
-    margin: 60px 0 100px 0;
+    margin: 40px 0 100px 0;
     @media(max-width:992px){
       margin: 70px 0;
     }
 }
 .wishlist-block-outer-timer {
-  margin: 100px 0 100px 0;
+  margin: 60px 0 100px 0;
 
   @media screen and (max-width:992px) {
     margin: 0 0 100px 0;
